// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ScanResults to Unified Results Test automaticChecksConversion works fine when there is no data in scanresults 1`] = `[]`;

exports[`ScanResults to Unified Results Test automaticChecksConversion works with filled up passes and failures value in scan results 1`] = `
[
  {
    "descriptors": {
      "snippet": "html1",
    },
    "identifiers": {
      "conciseName": "id1",
      "css-selector": "target1;id1",
      "identifier": "target1;id1",
      "target": [
        "target1",
        "id1",
      ],
    },
    "resolution": {
      "howToFixSummary": "how to fix 1",
      "test fix resolution": {},
    },
    "ruleId": "id1",
    "status": "fail",
    "uid": "gguid-mock-stub",
  },
  {
    "descriptors": {
      "snippet": "html2",
    },
    "identifiers": {
      "conciseName": "id2",
      "css-selector": "target2;id2",
      "identifier": "target2;id2",
      "target": [
        "target2",
        "id2",
      ],
    },
    "resolution": {
      "howToFixSummary": "how to fix 2",
      "test fix resolution": {},
    },
    "ruleId": "id1",
    "status": "fail",
    "uid": "gguid-mock-stub",
  },
  {
    "descriptors": {
      "snippet": "html3",
    },
    "identifiers": {
      "conciseName": "id3",
      "css-selector": "target3;id3",
      "identifier": "target3;id3",
      "target": [
        "target3",
        "id3",
      ],
    },
    "resolution": {
      "howToFixSummary": "how to fix 3",
      "test fix resolution": {},
    },
    "ruleId": "id2",
    "status": "fail",
    "uid": "gguid-mock-stub",
  },
  {
    "descriptors": {
      "snippet": "html-pass",
    },
    "identifiers": {
      "conciseName": "passTarget2",
      "css-selector": "passTarget1;passTarget2",
      "identifier": "passTarget1;passTarget2",
      "target": [
        "passTarget1",
        "passTarget2",
      ],
    },
    "resolution": {
      "howToFixSummary": undefined,
      "test fix resolution": {},
    },
    "ruleId": "test",
    "status": "pass",
    "uid": "gguid-mock-stub",
  },
]
`;

exports[`ScanResults to Unified Results Test needsReviewConversion works fine when there is no data in scanresults 1`] = `[]`;

exports[`ScanResults to Unified Results Test needsReviewConversion works with filled up passes, failures and incomplete values in scan results 1`] = `
[
  {
    "descriptors": {
      "snippet": "html-incomplete",
    },
    "identifiers": {
      "conciseName": "incompleteTarget1",
      "css-selector": "incompleteTarget1",
      "identifier": "incompleteTarget1",
      "target": [
        "incompleteTarget1",
      ],
    },
    "resolution": {
      "howToFixSummary": undefined,
      "test check resolution": {},
    },
    "ruleId": "test2",
    "status": "unknown",
    "uid": "gguid-mock-stub",
  },
  {
    "descriptors": {
      "snippet": "html1",
    },
    "identifiers": {
      "conciseName": "id1",
      "css-selector": "target1;id1",
      "identifier": "target1;id1",
      "target": [
        "target1",
        "id1",
      ],
    },
    "resolution": {
      "howToFixSummary": "how to fix 1",
      "test check resolution": {},
    },
    "ruleId": "id1",
    "status": "unknown",
    "uid": "gguid-mock-stub",
  },
  {
    "descriptors": {
      "snippet": "html2",
    },
    "identifiers": {
      "conciseName": "id2",
      "css-selector": "target2;id2",
      "identifier": "target2;id2",
      "target": [
        "target2",
        "id2",
      ],
    },
    "resolution": {
      "howToFixSummary": "how to fix 2",
      "test check resolution": {},
    },
    "ruleId": "id1",
    "status": "unknown",
    "uid": "gguid-mock-stub",
  },
  {
    "descriptors": {
      "snippet": "html3",
    },
    "identifiers": {
      "conciseName": "id3",
      "css-selector": "target3;id3",
      "identifier": "target3;id3",
      "target": [
        "target3",
        "id3",
      ],
    },
    "resolution": {
      "howToFixSummary": "how to fix 3",
      "test check resolution": {},
    },
    "ruleId": "id2",
    "status": "unknown",
    "uid": "gguid-mock-stub",
  },
]
`;
